inject js in client

--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "export": "resume export --resume ./resume.json --theme kendall",
     "pdf": "$npm_execpath run export -- --format pdf \"vladimir.tasic-cv.pdf\"",
     "html": "$npm_execpath run export -- --format html \"index.html\"",
-    "build": "npm run build-functions && npm run pdf && npm run html && mkdir -p build && mv *.html ./build/index.html && mv vladimir.tasic-cv.pdf ./build",
+    "build": "npm run build-functions && npm run pdf && npm run html && mkdir -p build && mv *.html ./build/index.html && mv vladimir.tasic-cv.pdf ./build && npm run inject-js-to-html",
     "build-functions": "netlify-lambda build functions-src",
-    "dev-functions": "npm run build && netlify dev"
+    "dev-functions": "npm run build && netlify dev",
+    "inject-js-to-html": "node post-process-src/index.mjs"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cheerio": "1.0.0-rc.12",
     "encoding": "0.1.13",
     "google-spreadsheet": "3.3.0",
     "jsonresume-theme-kendall": "0.2.0",
